--- a/gh-pages/src/supported-browsers.html
+++ b/gh-pages/src/supported-browsers.html
@@ -69,7 +69,7 @@ layout: "default.html"
 </style>
 <script type="module">
   // Conditional equired as 11ty cannot resolve module import URLs in github pages
-  import { getCompatibleVersions } from '{% if eleventy.env.runMode != "serve" %}/web-features{% endif %}/assets/js/baseline-browser-mapping/index.js'
+  import { getCompatibleVersions } from 'https://cdn.jsdelivr.net/npm/baseline-browser-mapping'
 
   // Declare globally useful variables
   const urlParams = new URLSearchParams(window.location.search);
