Rewording gh-pages index and supported-browsers pages

--- a/gh-pages/src/supported-browsers.html
+++ b/gh-pages/src/supported-browsers.html
@@ -4,7 +4,6 @@ layout: "default.html"
 ---
 
 <style>
-  #downstreamContainer,
   #widelyAvailableOnDateLabel {
     display: none;
   }
@@ -107,7 +106,9 @@ layout: "default.html"
     qq_android: "QQ Browser Mobile",
     uc_android: "UC Browser Mobile",
     ya_android: "Yandex Browser Mobile",
+    kai_os: "KaiOS"
   };
+  const calloutDownstreamBrowsers = ["kai_os", "webview_android"]
   const datePicker = document.getElementById("widelyAvailableOnDatePicker");
   const targetSelect = document.getElementById("targetSelect");
   const nextYear = new Date().getFullYear() + 1;
@@ -138,7 +139,8 @@ layout: "default.html"
       `<tr>
         <th>Browser</th>
         <th>Version</th>
-        <th>Chromium version</th>
+        <th>Engine</th>
+        <th>Version</th>
         <th>Release date</th>
       </tr>` +
       versions
@@ -146,8 +148,9 @@ layout: "default.html"
         .map((version) => {
           return (
             `<tr view-transition-name="view-transition-${version.browser}">` +
-            `<td>${nameMappings[version.browser]}</td>
+            `<td>${nameMappings[version.browser]}${calloutDownstreamBrowsers.indexOf(version.browser) != -1 ? '*' : ''}</td>
           <td>${version.version}</td>
+          <td>${version.engine}</td>
           <td>${version.engine_version}</td>
           <td>${version.release_date}</td>` +
             `</tr>`
@@ -162,6 +165,7 @@ layout: "default.html"
     const versions = getCompatibleVersions({
       ...config,
       includeDownstreamBrowsers: true,
+      includeKaiOS: true
     });
 
     if (!document.startViewTransition) {
@@ -218,16 +222,6 @@ layout: "default.html"
     setInputValue(datePicker, new Date().toISOString().slice(0, 10));
     datePicker.setAttribute("max", maxWaDate.toISOString().slice(0, 10));
 
-    // Set downstream browser display
-    // NB: downstream browsers are always requested from baseline-browser-mapping
-    const includeDownstreamFromUrl =
-      urlParams.get("includeDownstream") === "true" ? true : false;
-    showHideElements("downstreamContainer", includeDownstreamFromUrl);
-    setInputValue(
-      document.getElementById("downstreamBrowsersCheckbox"),
-      includeDownstreamFromUrl,
-    );
-
     // Look for target year in URL
     if (urlParams.get("targetYear")) {
       configObject.targetYear = parseInt(urlParams.get("targetYear"));
@@ -259,15 +253,6 @@ layout: "default.html"
   };
 
   // Event handlers for inputs
-  document
-    .getElementById("downstreamBrowsersCheckbox")
-    .addEventListener("change", (e) => {
-      updateUrl(urlParams, {
-        set: { includeDownstream: e.target.checked },
-      });
-      showHideElements("downstreamContainer", e.target.checked);
-      return;
-    });
 
   document.getElementById("targetSelect").addEventListener("change", (e) => {
     e.preventDefault();
@@ -336,10 +321,6 @@ layout: "default.html"
     <input id="widelyAvailableOnDatePicker" min="2018-01-29" type="date" />
   </label>
 
-  <label id="showDownstreamLabel">
-    <input id="downstreamBrowsersCheckbox" type="checkbox" />
-    Show downstream browsers
-  </label>
 </div>
 
 <div id="loadingContainer"></div>
@@ -358,9 +339,24 @@ layout: "default.html"
     in these browsers if they make up a significant portion of your user base.
     To learn more about how these version mappings were calculated, see
     <a
-      href="https://github.com/web-platform-dx/baseline-browser-mapping/#downstream-browsers"
-      >baseline-browser-mapping</a
-    >.
+      href="https://github.com/web-platform-dx/baseline-browser-mapping/#downstream-browsers">baseline-browser-mapping</a>.
   </p>
   <table id="downstreamVersionsList"></table>
+  <p><strong>* NOTE:</strong> Android WebView supports the majority of Baseline features. However, there are exceptions
+    that you should take into account if you rely heavily on webviews. For details on which APIs are unsupported in
+    Android and iOS webviews, see <a href="https://caniwebview.com">caniwebview.com</a></p>
+  <p><strong>* NOTE:</strong> KaiOS is a feature phone operating system used for flip phones which implements the Gecko
+    engine
+    from Firefox. It is possible
+    to derive feature support in KaiOS based on Gecko feature support, but please be aware that KaiOS has a
+    significantly
+    different set of UI limitations and interaction model compared to the other browsers on this page. For more
+    information,
+    see the KaiOS developer documentation.</p>
+  <p>Other browsers built on Chromium/Blink, Gecko and WebKit will also support Baseline features. If you work on a
+    browser and can provide data connecting your versions back to their upstream engine for
+    <code>baseline-browser-mapping</code>,
+    please
+    <a href="https://github.com/web-platform-dx/baseline-browser-mapping/issues" target="_blank">create an issue</a>.
+  </p>
 </div>
